bgd/bgd-namespace.yaml
apiVersion: v1
kind: Namespace
annotations:
    argocd.argoproj.io/sync-wave: "0"
metadata:
  name: bgd
