bgd/bgd-svc.yaml
---
apiVersion: v1
kind: Service
annotations:
    argocd.argoproj.io/sync-wave: "1"
metadata:
  namespace: bgd
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bgd
---
