bgd/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
annotations:
    argocd.argoproj.io/sync-wave: "2"
metadata:
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
  namespace: bgd
spec:
  host: "bgd.apps.uat.pkthakur.in"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
